@@ -76,6 +76,7 @@ Summary of important user-visible changes for version 5.0 (yyyy-mm-dd):
 
       Function             | Replacement
       ---------------------|------------------
+      findstr              | strfind
       flipdim              | flip
       isequalwithequalnans | isequaln
       isstr                | ischar
